# stock-n

./: .dockerignore  .env.local  .env.production  .env.production.template  .gitignore  CLAUDE.md  DEPLOY.md  DOCKER.md  README.md  deploy.sh  docker-build.sh  docker-compose.stable.yml  docker-compose.yml  docker-load.sh  docker-push.sh  docker-save.sh  docker-upload.sh  run_n_rule.sh  start.bat  start.sh
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  Dockerfile.stable  README.md  main.py  pyproject.toml
backend/doc/: project_overview.md
backend/scripts/: filter_stock_n.py  query_zt_stock.py  save_zt_stock.py  test_filter_rules.py
backend/src/: __init__.py
backend/src/api/: __init__.py  app.py  models.py  routes.py  services.py
backend/src/dao/: __init__.py  day_stock_dao.py  stock_n_dao.py  zt_stock_dao.py
backend/src/middleware/: __init__.py  mysql.py
backend/src/service/: n_calculate.py  price_calculate.py  sectors.py
backend/src/stock_service/: __init__.py  tools.py  tushare_api.py  ztapi.py
backend/src/vo/: __init__.py  stock.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  stock-n.html
