[project]
name = "my-n"
version = "0.1.0"
description = "股票价格计算API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=1.10.0,<2.0.0",
    "pandas==2.2.3",
    "python-dateutil>=2.8.0",
    "tushare>=1.4.24",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=46.0.7",
    "chinese-calendar>=1.8.0",
]


